syntax = "proto3";
package types;

option go_package = "github.com/ginchuco/ginchu/lib";

import "block.proto";

// ordered by stream priority
enum Topic {
  CONSENSUS = 0;
  BLOCK = 1;
  BLOCK_REQUEST = 2;
  TX = 3;
  PEERS_RESPONSE = 4;
  PEERS_REQUEST = 5;
  INVALID = 6;
}

message PeerInfo {
  PeerAddress Address = 1;
  bool is_outbound = 2;
  bool is_must_connect = 3;
  bool is_trusted = 4;
  int32 reputation = 5;
}

message PeerAddress {
  bytes public_key = 1;
  string net_address = 2;
  PeerMeta peer_meta = 3;
}

message PeerMeta {
  uint64 network_id = 1;
  repeated uint64 chains = 2;
  bytes signature = 3;
}

message ConsensusMessage {
  uint64 committee_id = 1;
  bytes message = 2;
}

message BlockRequestMessage {
  uint64 committee_id = 1;
  uint64 height = 2;
  bool height_only = 3;
}

message BlockResponseMessage {
  uint64 committee_id = 1;
  uint64 max_height = 2;
  QuorumCertificate BlockAndCertificate = 3;
}

message TxMessage {
  uint64 committee_id = 1;
  bytes tx = 2;
}
