syntax = "proto3";
package types;

option go_package = "github.com/canopy-network/canopy/lib";


message CertificateResult {
  // PAYMENT PERCENTS
  RewardRecipients reward_recipients = 1;
  SlashRecipients slash_recipients = 2;
  Orders orders = 3;
  Checkpoint checkpoint = 4;
}

message CertificateResults {
  repeated CertificateResult proposals = 1;
}

message RewardRecipients {
  repeated PaymentPercents payment_percents = 1; // recipients of the block reward by percentage
  uint64 number_of_samples = 2;
}

message SlashRecipients {
  repeated DoubleSigner double_signers = 1; // who did the bft decide was a double signer
  repeated bytes bad_proposers = 2; // who did the bft decide was a bad proposer
}

message Orders {
  repeated BuyOrder buy_orders = 1;
  repeated uint64 reset_orders = 2;
  repeated uint64 close_orders = 3;
}

message BuyOrder {
  uint64 order_id = 1;
  bytes buyer_receive_address = 2;
  uint64 buyer_chain_deadline = 3;
}

message Checkpoint {
  uint64 height = 1;
  bytes block_hash = 2;
}

message PaymentPercents {
  bytes address = 1;
  uint64 percent = 2;
}

message DoubleSigner {
  bytes pubKey = 1;
  repeated uint64 heights = 2;
}
